k8s/03-postgres-new.yaml
apiVersion: v1
kind: Service
metadata:
  name: supabase-postgres
  namespace: supabase
spec:
  selector:
    app: supabase-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: supabase-postgres
  namespace: supabase
spec:
  serviceName: supabase-postgres
  replicas: 1
  selector:
    matchLabels:
      app: supabase-postgres
  template:
    metadata:
      labels:
        app: supabase-postgres
    spec:
      securityContext:
        fsGroup: 999
        runAsUser: 999
        runAsGroup: 999
      containers:
        - name: db
          image: supabase/postgres:15.8.1.085
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
            - name: initdb
              mountPath: /docker-entrypoint-initdb.d
            - name: etc-postgresql-custom
              mountPath: /etc/postgresql-custom
      volumes:
        - name: initdb
          emptyDir: {}
        - name: cm-init-scripts
          configMap:
            name: supabase-db-init-scripts
        - name: cm-migrations
          configMap:
            name: supabase-db-migrations
        - name: etc-postgresql-custom
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
