k8s/10-gotrue.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotrue
  namespace: supabase
spec:
  selector:
    app: gotrue
  ports:
    - name: http
      port: 9999
      targetPort: 9999
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotrue
  namespace: supabase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gotrue
  template:
    metadata:
      labels:
        app: gotrue
    spec:
      containers:
        - name: gotrue
          image: supabase/gotrue:v2.164.2
          ports:
            - containerPort: 9999
