k8s/11-postgrest.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgrest
  namespace: supabase
spec:
  selector:
    app: postgrest
  ports:
    - name: http
      port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgrest
  namespace: supabase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgrest
  template:
    metadata:
      labels:
        app: postgrest
    spec:
      containers:
        - name: postgrest
          image: postgrest/postgrest:v12.2.3
          ports:
            - containerPort: 3000
