k8s/14-imgproxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: imgproxy
  namespace: supabase
spec:
  selector:
    app: imgproxy
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imgproxy
  namespace: supabase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: imgproxy
  template:
    metadata:
      labels:
        app: imgproxy
    spec:
      containers:
        - name: imgproxy
          image: darthsim/imgproxy:v3.21
          ports:
            - containerPort: 8080
