k8s/15-studio.yaml
apiVersion: v1
kind: Service
metadata:
  name: studio
  namespace: supabase
spec:
  selector:
    app: studio
  ports:
    - name: http
      port: 3001
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: studio
  namespace: supabase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: studio
  template:
    metadata:
      labels:
        app: studio
    spec:
      containers:
        - name: studio
          image: supabase/studio:20240514-2b3532f
          ports:
            - containerPort: 3000
