k8s/16-pgmeta.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgmeta
  namespace: supabase
spec:
  selector:
    app: pgmeta
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgmeta
  namespace: supabase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgmeta
  template:
    metadata:
      labels:
        app: pgmeta
    spec:
      containers:
        - name: pgmeta
          image: supabase/pg-meta:v0.80.0
          ports:
            - containerPort: 8080
